<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <Button
        android:id="@+id/button_apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="@string/button_apple"
        android:onClick="btnApple"
        app:layout_constraintBottom_toTopOf="@+id/button_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <Button
        android:id="@+id/button_cheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cheese"
        android:onClick="btnCheese"
        app:layout_constraintBottom_toTopOf="@+id/button_rice"
        app:layout_constraintEnd_toStartOf="@+id/button_apple"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <Button
        android:id="@+id/button_egg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/button_egg"
        android:onClick="btnEgg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_orange"
        app:layout_constraintTop_toBottomOf="@+id/button_orange"
        app:layout_constraintVertical_bias="0.315" />

    <Button
        android:id="@+id/button_icecream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_icecream"
        android:onClick="btnIcecream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_egg"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rice"
        app:layout_constraintVertical_bias="0.315" />

    <Button
        android:id="@+id/button_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="@string/button_orange"
        android:onClick="btnOrange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_apple"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_rice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_rice"
        android:onClick="btnRice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_orange"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>